k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: company-website
spec:
  selector:
    app: company-website
  ports:
  - port: 7000
    targetPort: 7000
  type: ClusterIP
